--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,19 +9,7 @@
   ></span>
   |
   <span>
-    <a
-      href="https://app.circleci.com/pipelines/circleci/6FfqBzs4fBDyTPvBNqnq5x/WCAab585ez56Du7MgmTwE1"
-      target="_blank"
-    >
-      <img
-        src="https://dl.circleci.com/status-badge/img/circleci/6FfqBzs4fBDyTPvBNqnq5x/WCAab585ez56Du7MgmTwE1/tree/master.svg?style=shield"
-        style="width: 100px; vertical-align: middle"
-        alt="CircleCI Build $BUILD_NUMBER"
-      /> </a
-  ></span>
-  |
-  <span>
-    <a href="{{ baseUrl }}/api-docs/swagger-ui/index.html" target="_blank">
+    <a href="{{ baseUrl }}/swagger-ui/index.html" target="_blank">
       <img
         src="Swagger_UI.png"
         alt="Swagger UI Logo"
