--- a/src/app/quiz/quiz-request/quiz-request.component.html
+++ b/src/app/quiz/quiz-request/quiz-request.component.html
@@ -65,8 +65,15 @@
       <th mat-header-cell *matHeaderCellDef class="column-header">Status</th>
       <td mat-cell *matCellDef="let request">
         <button mat-raised-button [color]="getStatusColor(request.status)">
-          <ng-container *ngIf="request.status === 'CREATING'; else showStatus">
-            <span>CREATING</span>
+          <ng-container
+            *ngIf="
+              request.status === 'CREATING' ||
+                request.status === 'QUEUED' ||
+                request.status === 'PROCESSING';
+              else showStatus
+            "
+          >
+            <span>{{ getEnumDisplayName(request.status) }}</span>
             <mat-progress-bar mode="indeterminate" color="accent" />
           </ng-container>
           <ng-template #showStatus>
