--- a/src/app/quiz/quiz-request/quiz-request.component.scss
+++ b/src/app/quiz/quiz-request/quiz-request.component.scss
@@ -84,7 +84,7 @@
   width: 15% !important;
 }
 
-.mat-column-dateFinished {
+.mat-column-dateModified {
   font-weight: normal;
   text-align: center;
   flex: 0 0 20% !important;
